# sharpshooter

./: .gitignore  README.md  plan.md  pyproject.toml
src/sharpshooter/: __init__.py  __main__.py  engine.py  main.py  service.py
static/: app.css  app.js
templates/: game.html  index.html
tests/: test_app.py  test_engine.py
