[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharpshooter"
version = "0.1.0"
description = "Local web game that simulates the Sharpshooter board."
readme = "plan.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
sharpshooter = "sharpshooter.__main__:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sharpshooter"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
